--- a/tpl/rating.html
+++ b/tpl/rating.html
@@ -27,7 +27,7 @@
 		</div>
 		
 		<!--@if($is_logged && $my_s != 'Y')-->
-			<!--@if(abs($oDocument->get('member_srl'))!==$logged_info->member_srl)-->
+			<!--@if(abs($oDocument->get('member_srl'))!==$logged_info->member_srl || $grant->is_admin)-->
 				<div class="rating-form">
 					<div class="my-rating">
 						<div class="label">내 평점 :</div>
