--- a/tpl/admin/config.html
+++ b/tpl/admin/config.html
@@ -12,7 +12,7 @@
 	</div>
 	<div class="x_panel-body">
 		<form action="./" method="post" class="x_form-horizontal">
-			<input type="hidden" name="module" value="starpoint" />
+			<input type="hidden" name="module" value="admin" />
 			<input type="hidden" name="act" value="procStarpointAdminInsertConfig" />
 
 			<div class="x_control-group">
@@ -24,6 +24,37 @@
 						<!--@end-->
 					</select>
 					<p class="x_help-block">평점 모듈을 사용할 대상 모듈을 선택하세요. 선택하지 않으면 모든 모듈에 적용됩니다.</p>
+				</div>
+			</div>
+
+			<div class="x_control-group">
+				<label class="x_control-label">별점 표시 방식</label>
+				<div class="x_controls">
+					<label class="x_inline">
+						<input type="radio" name="display_type" value="star" checked="checked"|cond="$config->display_type != 'number'" /> 별 아이콘
+					</label>
+					<label class="x_inline">
+						<input type="radio" name="display_type" value="number" checked="checked"|cond="$config->display_type == 'number'" /> 숫자
+					</label>
+				</div>
+			</div>
+
+			<div class="x_control-group">
+				<label class="x_control-label">최대 별점</label>
+				<div class="x_controls">
+					<select name="max_rating">
+						<option value="5" selected="selected"|cond="$config->max_rating == 5 || !$config->max_rating">5</option>
+						<option value="10" selected="selected"|cond="$config->max_rating == 10">10</option>
+					</select>
+				</div>
+			</div>
+			
+			<div class="x_control-group">
+				<label class="x_control-label">비회원 평점</label>
+				<div class="x_controls">
+					<label class="x_checkbox">
+						<input type="checkbox" name="allow_guest" value="Y" checked="checked"|cond="$config->allow_guest == 'Y'" /> 비회원 평점 허용
+					</label>
 				</div>
 			</div>
 
