--- a/tpl/simple/rating.html
+++ b/tpl/simple/rating.html
@@ -14,58 +14,56 @@
 
 <div class="rating-container">
 	<div class="rating-widget">
-		<div class="rating-title">이 {$mi->starpoint_text}의 평점 (참여 : {$total_point->count_members} / 총 점수 : {$total_point->sum})</div>
-		
-		<div class="rating-average">
-			<div class="label">평균 평점 :</div>
-			<div class="stars">
-				<!--@for($i=1;$i<=5;$i++)-->
-					<span class="star {$total_point->avg >= $i ? 'filled' : ($total_point->avg >= $i-0.5 ? 'half-filled' : 'empty')}">★</span>
-				<!--@end-->
-				<span class="score">{number_format($total_point->avg, 1)}점</span>
-			</div>
-		</div>
-		
-		<!--@if($is_logged && $my_s != 'Y')-->
-			<!--@if(abs($oDocument->get('member_srl'))!==$logged_info->member_srl || $grant->is_admin)-->
-				<div class="rating-form">
-					<div class="my-rating">
-						<div class="label">내 평점 :</div>
-						<div class="stars" id="star-selector">
+		<div>
+			<span class="rating-title">이 {$mi->starpoint_text}의 평점 (참여 : {$total_point->count_members} / 총 점수 : {$total_point->sum})</span>
+			
+			<span class="rating-average">
+				<span class="labels">평균 평점 :</span>
+				<span class="stars">
+					<!--@for($i=1;$i<=5;$i++)-->
+						<span class="star {$total_point->avg >= $i ? 'filled' : ($total_point->avg >= $i-0.5 ? 'half-filled' : 'empty')}">★</span>
+					<!--@end-->
+					<span class="score">{number_format($total_point->avg, 1)}점</span>
+				</span>
+			</span>
+			
+			<!--@if($is_logged && $my_s != 'Y')-->
+				<!--@if(abs($oDocument->get('member_srl'))!==$logged_info->member_srl || $grant->is_admin)-->
+					<span class="my-rating">
+						<span class="labels">내 평점 :</span>
+						<span class="stars" id="star-selector">
 							<!--@for($i=1;$i<=5;$i++)-->
 							<span class="star star-select" data-value="{$i}">★</span>
 							<!--@end-->
-						</div>
-						<div class="selected-rating">
+						</span>
+						<span class="selected-rating">
 							<span id="selected-value">0</span>점
-						</div>
-					</div>
-						<div class="submit-button">
-							<button type="button" class="spb" id="submit-rating">평가하기</button>
-						</div>
-				</div>
-			<!--@else-->
-				<div class="login-required">본인의 글은 평가할 수 없습니다.</div>
-			<!--@end-->
-		<!--@elseif($is_logged && $my_s = 'Y')-->
-			<div class="already-rated">
-			<div class="my-rating-display">
-				<div class="label">내가 평가한 점수 :</div>
-				<div class="stars" style="display: inline-block;">
-					<!--@if(is_object($my_starpoint) && isset($my_starpoint->star_rate))-->
-						<!--@for($i=1;$i<=5;$i++)-->
-						<span class="star {$my_starpoint->star_rate >= $i ? 'filled' : 'empty'}">★</span>
+						</span>
+					</span>
+					<span class="submit-button">
+						<button type="button" class="spb" id="submit-rating">평가하기</button>
+					</span>
+				<!--@else-->
+					<div class="login-required">본인의 글은 평가할 수 없습니다.</div>
+				<!--@end-->
+			<!--@elseif($is_logged && $my_s = 'Y')-->
+				<span class="my-rating-display">
+					<span class="labels">내가 평가한 점수 :</span>
+					<span class="stars">
+						<!--@if(is_object($my_starpoint) && isset($my_starpoint->star_rate))-->
+							<!--@for($i=1;$i<=5;$i++)-->
+							<span class="star {$my_starpoint->star_rate >= $i ? 'filled' : 'empty'}">★</span>
+							<!--@end-->
+							<span class="score">{$my_starpoint->star_rate}점</span>
+						<!--@else-->
+							<span class="score">평점 정보를 찾을 수 없습니다.</span>
 						<!--@end-->
-						<span class="score">{$my_starpoint->star_rate}점</span>
-					<!--@else-->
-						<span class="score">평점 정보를 찾을 수 없습니다.</span>
-					<!--@end-->
-				</div>
-			</div>
+					</span>
+				</span>
+			<!--@elseif(!$is_logged)-->
+				<div class="login-required">로그인 후 평가하실 수 있습니다.</div>
+			<!--@end-->
 		</div>
-		<!--@elseif(!$is_logged)-->
-			<div class="login-required">로그인 후 평가하실 수 있습니다.</div>
-		<!--@end-->
 	</div>
 </div>
 
