--- a/skins/black_default/rating.html
+++ b/skins/black_default/rating.html
@@ -17,7 +17,7 @@
 		<div class="rating-title">이 {$mi->starpoint_text}의 평점 (참여 : {$total_point->count_members} / 총 점수 : {$total_point->sum})</div>
 
 		<div class="rating-average">
-			<div class="label">평균 평점 :</div>
+			<div class="label" style="color:#fff">평균 평점 :</div>
 			<div class="stars">
 				<!--@for($i=1;$i<=5;$i++)-->
 					<span class="star {$total_point->avg >= $i ? 'filled' : ($total_point->avg >= $i-0.5 ? 'half-filled' : 'empty')}">★</span>
