--- a/tpl/config.html
+++ b/tpl/config.html
@@ -17,7 +17,7 @@
 			<div style="font-size:16px; font-weight:bold;">▶️ ️게시판 스킨에 설치</div><br>
 			<div class="">
 				<p class="x_help-block">별점 기능을 사용할 게시판 스킨에 아래의 코드를 작성합니다.</p>
-				<p class="x_help-block">sketchbook5(스케치북5) 스킨을 예제로 삼습니다. ./modules/board/skins/sketchbook5</p>
+				<p class="x_help-block">sketchbook5(스케치북5) 스킨을 예제로 인용합니다. ./modules/board/skins/sketchbook5</p>
 				<p></p>
 				<div>
 					<p class="x_help-block">1. 모듈 지정 설정</p>
