--- a/skins/black_default/rating.html
+++ b/skins/black_default/rating.html
@@ -17,7 +17,7 @@
 		<div class="rating-title">이 {$mi->starpoint_text}의 평점 (참여 : {$total_point->count_members} / 총 점수 : {$total_point->sum})</div>
 
 		<div class="rating-average">
-			<div class="label" style="color:#fff">평균 평점 :</div>
+			<div class="label">평균 평점 :</div>
 			<div class="stars">
 				<!--@for($i=1;$i<=5;$i++)-->
 					<span class="star {$total_point->avg >= $i ? 'filled' : ($total_point->avg >= $i-0.5 ? 'half-filled' : 'empty')}">★</span>
@@ -41,7 +41,7 @@
 						</div>
 					</div>
 						<div class="submit-button">
-							<button type="button" class="spb" id="submit-rating">평가하기</button>
+							<button type="button" class="spb" id="submit-rating" data-document-srl="{$oDocument->document_srl}">평가하기</button>
 						</div>
 				</div>
 			<!--@else-->
@@ -50,7 +50,7 @@
 		<!--@elseif($is_logged && $my_s = 'Y')-->
 			<div class="already-rated">
 			<div class="my-rating-display">
-				<div class="label">내가 평가한 점수 :</div>
+				<div class="label" style="color:#444;">내가 평가한 점수 :</div>
 				<div class="stars" style="display: inline-block;">
 					<!--@if(is_object($my_starpoint) && isset($my_starpoint->star_rate))-->
 						<!--@for($i=1;$i<=5;$i++)-->
@@ -63,6 +63,9 @@
 				</div>
 			</div>
 		</div>
+		<span class="submit-button">
+			<button type="button" class="spb cancel-btn" id="cancel-rating" data-document-srl="{$oDocument->document_srl}">평가 취소</button>
+		</span>
 		<!--@elseif(!$is_logged)-->
 			<div class="login-required">로그인 후 평가하실 수 있습니다.</div>
 		<!--@end-->
