--- a/skins/default/rating.html
+++ b/skins/default/rating.html
@@ -41,13 +41,13 @@
 						</div>
 					</div>
 						<div class="submit-button">
-							<button type="button" class="spb" id="submit-rating">평가하기</button>
+							<button type="button" class="spb" id="submit-rating" data-document-srl="{$oDocument->document_srl}">평가하기</button>
 						</div>
 				</div>
 			<!--@else-->
 				<div class="login-required">본인의 글은 평가할 수 없습니다.</div>
 			<!--@end-->
-		<!--@elseif($is_logged && $my_s = 'Y')-->
+		<!--@elseif($is_logged && $my_s == 'Y')-->
 			<div class="already-rated">
 			<div class="my-rating-display">
 				<div class="label">내가 평가한 점수 :</div>
@@ -63,6 +63,9 @@
 				</div>
 			</div>
 		</div>
+		<span class="submit-button">
+			<button type="button" class="spb cancel-btn" id="cancel-rating" data-document-srl="{$oDocument->document_srl}">평가 취소</button>
+		</span>
 		<!--@elseif(!$is_logged)-->
 			<div class="login-required">로그인 후 평가하실 수 있습니다.</div>
 		<!--@end-->
