--- a/skins/simple/rating.html
+++ b/skins/simple/rating.html
@@ -41,12 +41,12 @@
 						</span>
 					</span>
 					<span class="submit-button">
-						<button type="button" class="spb" id="submit-rating">평가하기</button>
+						<button type="button" class="spb" id="submit-rating" data-document-srl="{$oDocument->document_srl}">평가하기</button>
 					</span>
 				<!--@else-->
 					<div class="login-required">본인의 글은 평가할 수 없습니다.</div>
 				<!--@end-->
-			<!--@elseif($is_logged && $my_s = 'Y')-->
+			<!--@elseif($is_logged && $my_s == 'Y')-->
 				<span class="my-rating-display">
 					<span class="labels">내가 평가한 점수 :</span>
 					<span class="stars">
@@ -59,6 +59,9 @@
 							<span class="score">평점 정보를 찾을 수 없습니다.</span>
 						<!--@end-->
 					</span>
+				</span>
+				<span class="submit-button">
+					<button type="button" class="spb cancel-btn" id="cancel-rating" data-document-srl="{$oDocument->document_srl}">평가 취소</button>
 				</span>
 			<!--@elseif(!$is_logged)-->
 				<div class="login-required">로그인 후 평가하실 수 있습니다.</div>
